@@ -132,6 +132,9 @@ Library
 - Issue #19449: in csv's writerow, handle non-string keys when generating the
   error message that certain keys are not in the 'fieldnames' list.
 
+- Issue #13633: Added a new convert_charrefs keyword arg to HTMLParser that,
+  when True, automatically converts all character references.
+
 - Issue #2927: Added the unescape() function to the html module.
 
 - Issue #8402: Added the escape() function to the glob module.
